footer text alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -9147,7 +9147,7 @@ textarea.form-control {
       border: 2px solid #fff !important; }
   .ftco-footer p {
     color: rgba(255, 255, 255, 0.7); 
-	text-align:center;
+	text-align:left;
 	}
   .ftco-footer a {
     /*color: rgba(255, 255, 255, 0.7); */
